<resources>
    <string name="app_name">FurFriend</string>
    <string name="splashText">Where Every Pawprint Matters</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="social">Social</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="onboardingTitle1">Welcome to FurFriend: Where Every Pawprint Matters!</string>
    <string name="onboardingTitle2">Discover And Connect, Wherever You Are</string>
    <string name="onboardingTitle3">Never Miss a Moment with Your Fur Friend</string>
    <string name="onboardingDesc1">All your pet’s needs in one place—simple, loving, connected</string>
    <string name="onboardingDesc2">Find nearby pet-friendly spots and share special moments with the community</string>
    <string name="onboardingDesc3">Track activities, set reminders, and keep your furry friend happy and healthy</string>
    <string name="next">Next</string>
    <string name="getStarted">Get Started</string>
    <string name="welcomeBack">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="login">Login</string>
    <string name="dontHaveAnAccount">Don\'t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="alreadyHaveAnAccount">Already have an account?</string>
    <string name="username">Username</string>
    <string name="atLeast6Char">At least 6 characters</string>
    <string name="atLeast1Upper1Lower">At least 1 uppercase and 1 lowercase</string>
    <string name="atLeast1Numeric">At least 1 numeric</string>
    <string name="atLeast1SpecialChar">At least 1 special character</string>
    <string name="accountCreatedSuccessfully">Your account has been created successfully!</string>
    <string name="incorrectEmailPassword">Incorrect email or password. Please try again.</string>
    <string name="usernameExisted">Username already existed. Please try again.</string>
    <string name="emailExisted">Email already existed. Please try again.</string>
    <string name="incorrectEmailFormat">Email format incorrect. Please try again.</string>
    <string name="loginFailed">Login failed. Please try again.</string>
    <string name="signupFailed">Signup failed. Please try again.</string>
    <string name="hi">Hi, %1$s</string>
    <string name="myPets">My Pet(s)</string>
    <string name="todayReminders">Today Reminder(s)</string>
    <string name="seeMore">See more</string>
    <string name="noPetAdded">No pet added</string>
    <string name="noReminderToday">No reminder today</string>
    <string name="settings">Settings</string>
    <string name="youDoNotOwnPet">You do not own any pet yet</string>
    <string name="pushNotification">Push Notification</string>
    <string name="language">Language</string>
    <string name="resetPassword">Reset Password</string>
    <string name="addNewPet">Add New Pet</string>
    <string name="logout">Log Out</string>
    <string name="areYouSureToLogout">Are you sure to logout?</string>
    <string name="yesLogout">Yes, logout</string>
    <string name="noStayHere">No, stay here</string>
    <string name="editProfile">Edit Profile</string>
    <string name="saveChanges">Save Changes</string>
    <string name="yourProfileHasBeenUpdated">Your profile has been updated!</string>
    <string name="done">Done</string>
    <string name="petName">Pet Name</string>
    <string name="type">Type</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="hamster">Hamster</string>
    <string name="bird">Bird</string>
    <string name="fish">Fish</string>
    <string name="reptile">Reptile</string>
    <string name="rabbit">Rabbit</string>
    <string name="other">Other</string>
    <string name="age">Age</string>
    <string name="day">Day(s)</string>
    <string name="week">Week(s)</string>
    <string name="month">Month(s)</string>
    <string name="year">Year(s)</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="add">Add</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="removePet">Remove Pet</string>
    <string name="areYouSureToRemove">Are you sure to remove?</string>
    <string name="yesRemove">Yes, remove</string>
    <string name="noCancel">No, cancel</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="malay">Malay</string>
    <string name="changeLanguage">Change Language</string>
    <string name="currentPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="searchPlaces">Search places…</string>
    <string name="category">Category</string>
    <string name="veterinaryCare">Veterinary Care</string>
    <string name="petStore">Pet Store</string>
    <string name="petfriendlyCafe">Pet Friendly Cafe</string>
    <string name="suggestion">Suggestion</string>
    <string name="openNow">Open Now</string>
    <string name="closedNow">Closed Now</string>
    <string name="petRelated">Pet Related</string>
    <string name="ratingNotAvailable">Rating not available</string>
    <string name="addressNotAvailable">Address not available</string>
    <string name="hoursNotAvailable">Hours not available</string>
    <string name="phoneNotAvailable">Phone not available</string>
    <string name="activities">Activities</string>
    <string name="emptyActivitiesText">No activities yet. Add your first pet activity!</string>
    <string name="addActivity">Add Activity</string>
    <string name="reminders">Reminders</string>
    <string name="emptyRemindersText">No reminders yet. Create a reminder for your pet!</string>
    <string name="addReminder">Add Reminder</string>
    <string name="title">Title</string>
    <string name="activityTitle">Activity title</string>
    <string name="reminderTitle">Reminder title</string>
    <string name="description">Description</string>
    <string name="activityDescription">Activity description</string>
    <string name="reminderDescription">Reminder description</string>
    <string name="date">Date</string>
    <string name="selectDate">Select date</string>
    <string name="time">Time</string>
    <string name="selectTime">Select time</string>
    <string name="pets">Pet(s)</string>
    <string name="selectPets">Select Pets</string>
    <string name="editActivity">Edit Activity</string>
    <string name="editReminder">Edit Reminder</string>
    <string name="exportPDF">Export PDF</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="choosePdfMode">Choose to export summary of your pet’s activities</string>
    <string name="export">Export</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="successMessage">An activity has been added successfully!</string>
    <string name="social_profile_my_posts">My posts</string>
    <string name="social_profile_posts">Posts</string>
    <string name="social_profile_likes">Likes</string>
    <string name="social_profile_followers">Followers</string>
    <string name="social_profile_following">Following</string>
    <string name="notification">Notification</string>
    <string name="add_post">Add Post</string>
    <string name="write_comment">Write a comment</string>
    <string name="send">Send</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="addpost_public">Public</string>
    <string name="addpost_private">Private</string>
    <string name="post">Post</string>
    <string name="post_description">What\'s on your mind?</string>
    <string name="write_here">Write here...</string>
    <string name="unknown">Unknown</string>
    <string name="selectPicture">Select Picture</string>
    <string name="pleaseFillInAll">Please fill in all fields</string>
    <string name="petAddedSuccessfully">Pet added successfully!</string>
    <string name="failToAddPet">Failed to add pet</string>
    <string name="noPetDetailsFound">No pet details found</string>
    <string name="failToLoadPetDetails">Failed to load pet details</string>
    <string name="usernameRequired">Username required</string>
    <string name="saving">Saving</string>
    <string name="failToUpdateProfile">Failed to update profile</string>
    <string name="currentPassIncorrect">Current password incorrect</string>
    <string name="passwordUpdateFail">Password update failed</string>
    <string name="passwordChangeSuccess">Password changed successfully</string>
</resources>