<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_back_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:text="@string/myPets"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/petList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/noPetView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/youDoNotOwnPet"
            android:textColor="@color/dark_grey"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"/>

        <Button
            android:id="@+id/btnAddNewPet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:padding="16dp"
            android:text="@string/addNewPet"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>